--- a/config_files/tmux2/.tmux.conf
+++ b/config_files/tmux2/.tmux.conf
@@ -1,12 +1,22 @@
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'odedlaz/tmux-onedark-theme'
+set -g @plugin 'dracula/tmux'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+
+# set -g @plugin 'odedlaz/tmux-onedark-theme'
+# set -g @plugin "arcticicestudio/nord-tmux"
+# set -g @plugin 'tmux-plugins/tmux-battery'
+
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
 # set -g @plugin 'github_username/plugin_name#branch'
 # set -g @plugin 'git@github.com:user/plugin'
 # set -g @plugin 'git@bitbucket.com:user/plugin'
 
+# available plugins: battery, cpu-usage, git, gpu-usage, ram-usage, network, network-bandwidth, network-ping, weather, time
+set -g @dracula-plugins "battery cpu-usage ram-usage time"
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
+
