mainly nvim stuff

--- a/config_files/tmux2/.tmux.conf
+++ b/config_files/tmux2/.tmux.conf
@@ -21,3 +21,6 @@ set -g @dracula-plugins "battery cpu-usage ram-usage time"
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
 
+set-option -sg escape-time 10
+set-option -g default-terminal "screen-256color"
+set-option -g focus-events on
